tektonyaml/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-code-push-tekton-trigger
spec:
  rules:
  - host: trigger.192.168.1.10.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: el-k8s-code-push-listener
          servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  rules:
  - host: tekton.192.168.1.10.xip.io
    http:
      paths:
      - backend:
          serviceName: tekton-dashboard
          servicePort: 9097
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: loki
  namespace: loki
spec:
  rules:
  - host: loki.192.168.1.10.xip.io
    http:
      paths:
      - backend:
          serviceName: loki
          servicePort: 3100
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: loki
spec:
  rules:
  - host: grafana.192.168.1.10.xip.io
    http:
      paths:
      - backend:
          serviceName: loki-grafana
          servicePort: 80
